src/src/objects/FileExplorerFolder__c.object
<CustomObject>
    <description>Store a hierarchical structure of content documents</description>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>FileExplorerFolder__c</referenceTo>
        <relationshipLabel>Folders</relationshipLabel>
        <relationshipName>File_Explorer_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated.</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Folder Label</description>
        <externalId>true</externalId>
        <inlineHelpText>Folder Label</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedEntityId__c</fullName>
        <description>Linked Entity Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Linked Entity Id</inlineHelpText>
        <label>Linked Entity Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>File Explorer Folder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Folder__c</columns>
        <columns>Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FEF-{0000000}</displayFormat>
        <label>File Explorer Folder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Explorer Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>